--- a/Foundations in R programming pt 2.Rmd
+++ b/Foundations in R programming pt 2.Rmd
@@ -495,11 +495,11 @@ else {
 ### else statement
 ```{r}
 mtcars$goodMileage2 <- NA
-#for (i in 1: nrow(mtcars)){ #you can use 'length(mtcars$mpg)'
- # if(mtcars$mpg[i]> 25){
+for (i in 1: nrow(mtcars)){ #you can use 'length(mtcars$mpg)'
+  if(mtcars$mpg[i]> 25){
     
-   # "good mileage"
-  #}
+    "good mileage"
+  }
 #else {mtcars$goodMileage2[i] <- "bad mileage"}
 ```
 
@@ -516,7 +516,7 @@ R lets you combine if/else statements into a single function, ifelse().
 
 We can use this to accomplish the same thing we did above:
 ```{r}
-#mtcars$mpg3 <- ifelse(mtcars$mpg>25, "good mileage", "bad mileage"
+mtcars$mpg3 <- ifelse(mtcars$mpg>25, "good mileage", "bad mileage"
 ```
 
 ### Learning Outcome 5 Practice: 
