--- a/Foundations in R programming pt 2.Rmd
+++ b/Foundations in R programming pt 2.Rmd
@@ -449,8 +449,7 @@ for (i in 1:length(testInput)){
 #testOutput <- rep(NA, length(testInput))
 #test <- cbind.data.frame(testInput, testOuput)
 #for(i in 1:nrow(test)){
-  #test$testOutput[i] <- test$testInput[i] * 4
-}
+  #test$testOutput[i] <- test$testInput[i] * 4}
 ```
 
 2. Create a new column in the mtcars data set that indicated whether a car has good mileage (over 25 mpg) or bad mileage (25 mpg or fewer).  
@@ -483,24 +482,27 @@ Let's try one: in this case, we'll make an if statement to milage
 ```{r}
 #create a new column 
 mtcars$goodMileage2 <- NA
+```
 
+```{r}
 #create an if statement for the first car
-if(mtcars$mpg[1]>25){
-  print("good mileage")
-}
-else {
-  print("bad mileage")
-}
+#The correct way to write an if statement 
+if(mtcars$mpg[i]>25){ 
+  print("good mileage") 
+  
+  #saving into a dataframe 
+  mtcars$goodMileage2[i] <- "good mileage"
+  #including an else statement 
+  } else {mtcars$goodMileage2[i] <- "bad mileage"}
 ```
 ### else statement
 ```{r}
 mtcars$goodMileage2 <- NA
-for (i in 1: nrow(mtcars)){ #you can use 'length(mtcars$mpg)'
-  if(mtcars$mpg[i]> 25){
-    
-    "good mileage"
+for (i in 1: nrow(mtcars)){ 
+  mtcars$goodMileage2[i] <- if(mtcars$mpg[i]>25){
+    mtcars$goodMileage2[i] <- "good mileage"
+  } else {mtcars$goodMileage2[i] <- "good mileage"}
   }
-#else {mtcars$goodMileage2[i] <- "bad mileage"}
 ```
 
 ```{r}
@@ -522,11 +524,38 @@ mtcars$mpg3 <- ifelse(mtcars$mpg>25, "good mileage", "bad mileage")
 ### Learning Outcome 5 Practice: 
 
 1. Make an if statement to determine if the weight of a chick on a given day is greater than 100 grams.  (i.e. is the weight in each row greater than 100 )
+
 ```{r}
+#create a for loop
+for (i in 1:nrow(ChickWeight)){
+  
+  #write an if statement
+     if(ChickWeight$weight[i]>100){
+       print("greater than 100")
+} else { print("less than 100")}
+}
+
+#another way is... 
+ChickWeight$weight2 <- ifelse(ChickWeight$weight>100, "greater than 100", "less than 100")
 
 ```
 
 2. create a new column in the mtcars data set to indicate whether a car has a manual or automatic transmission. 
 ```{r}
+mtcars$automan <- ifelse(mtcars$transmission==0, "automatic", "manual")
 
+#looking at the help, it shows that 0= automatic, 1=manual 
+
+
+#if we have more than one if else statement 
+mtcars$gearTwo <- ifelse(mtcars$gear==3, "three", ifelse(mtcars$gear==4, "four", "five"))
+
+for (i in 1:nrow(mtcars)){
+  if(mtcars$gear[i]==3) {
+    mtcars$gearThree[i] <- "four"
+  } 
+  if(mtcars$gear[i]==5){
+    mtcars$gearThree[i] <- "five"
+  }
+}
 ```
