--- a/ggplotNotes.Rmd
+++ b/ggplotNotes.Rmd
@@ -21,10 +21,7 @@ We've already talked about how to transform data into wide and long format. For 
 **summarySE**
 To do this, we're going to use a function called `summarySE()`. It's in the Rmisc package
 ```{r}
-# install.package("Rmisc")
-
 library(Rmisc)
-
 ```
 
 We'll try this with the diamonds dataset (located in ggplot). Specifically, we'll create a summary of price by color. 
@@ -33,51 +30,49 @@ Note: If you have a slow computer, make a subset of the diamonds dataset (typica
 ```{r}
 library(tidyverse)
 data(diamonds)
-bigDiamonds <- subset(diamonds, diamonds$carat>1)
+bigDiamonds<- subset(diamonds, diamonds$carat>1) #if needed
 ```
 
 The structure for summarySE is: 
 
 `summarySE(data, measurevar(the variable you want to summarize), grouping variables, confidence interval)`
 ```{r}
-summarySE(diamonds, measurevar="price", groupvars= "cut")
+pricebyCut<-summarySE(diamonds, measurevar = "price", groupvars= "cut")
 ```
 
 alternatively, you can use pipes to summarize your data and get it set up in the format you need for graphing. 
 
 To do this, we could use the `group_by()` function and the `summarise()` function 
-
 ```{r}
-# Fusing prime
+# Using prime
 priceByCut2 <- diamonds %>% 
-  group_by(cut) %>% 
-  summarise(mean= mean(price), sd=sd(price),
-  sd(price/sqrt(length(cut))))
-```
-```{r}
-
-# A second to code using dplyr
-diamonds %>% 
   group_by(cut) %>%
-  dplyr::summarize(Mean= mean(price), Sd= sd(price),sd(price/sqrt(length(cut))))
+  summarise(mean=mean(price),sd=sd(price),
+  sd(price/sqrt(length(cut))))
+
 ```
+
+```{r}
+# Using dplyr
+diamonds %>%
+  group_by(cut) %>% 
+  dplyr::summarize(Mean= mean(price), Sd= sd(price))
+```
+
 
 ### Learning Outcome 1: Practice 
 1. Open the mtcars dataset. Create a dataset containing a summary of the mpg by cylinder (cyl).
 ```{r}
-# open mtcar data 
-data("mtcars")
-
-# summary of 
-# mtcars2 <- summarySE(mtcars, measurevar= "mgp", groupvars= "cyl")
-# mtcars2
+data(mtcars)
+mtcars2<- summarySE(mtcars, measurevar= "mpg", groupvars="cyl")
+mtcars2
 ```
 
 ### General Graphing Notes:
 we'll be talking about lots of ways you can make graphs. Things that we won't talk about today (but may be helpful):
 - APA style graphs https://rdrr.io/cran/jtools/man/theme_apa.html
 ```{r}
-library("jtools")
+library(jtools)
 #install.packages("jtools")
 ```
 
@@ -92,8 +87,7 @@ ggplot makes graphs in layers. I'll try to demonstrate:
 
 Here is an "empty graph" 
 ```{r}
-
-
+ggplot()
 ```
 You'll notice that the Plot window opened on my version of R and contains a gray background. This is a default "empty graph."
 
@@ -103,8 +97,7 @@ The next step is to include a dataset and to include an argument called aestheti
 
 In our case, we'll use the diamonds dataset again and see what happens when we include an x variable. 
 ```{r}
-library("ggplot2")
-ggplot(diamonds, aes(prices))
+ggplot(diamonds, aes(price))
 ```
 
 You'll notice that now we have an x axis, labeled x with values on it. 
@@ -115,19 +108,14 @@ This `ggplot()` section is the base of our graph. We add additional parts using 
 We'll start with histograms because we only need one variable to make one. To do this, we can add `+geom_histogram()` to our code above. 
 
 ```{r}
-ggplot(diamonds, aes(prices))+ geom_histogram()
+ggplot(diamonds, aes(price))+ geom_histogram()+theme_classic()
 ```
 
 **Changing the background**
 I really don't like the gray background (personal preference). So the first customization we'll do is remove the background using a themes argument.
 ```{r}
-ggplot(diamonds, aes(prices))+ geom_histogram()+theme_classic()
-```
+ggplot(diamonds, aes(price))+ geom_histogram()+theme_apa()
 
-```{r}
-ggplot(diamonds, aes(prices))+geom_histogram()+theme_apa()
-
-# only work if you install 'jtools'
 ```
 It can be used with any graph. 
 
@@ -136,10 +124,9 @@ There are two additional arguments we can use to change the colors; color and fi
 
 Note: color and fill go in the histogram layer
 ```{r}
-ggplot(diamonds, aes(price))+ geom_histogram(color="orange", fill="blue" + themes_classic()
+ggplot(diamonds, aes(price))+ geom_histogram(color= "orange", fill= "blue")+ theme_classic()
 
-# You can write the name of the color or use the code                                          
-
+ggplot(diamonds, aes(price))+geom_histogram(color= "black", fill= "#B4CEB3")
 ```
 **Note**You can also put the color and fill arguments in the `aes()` section. As your graphs get more complicated, you will notice that placement matters and will result in slightly different graphs. We're not going to go that far today though.
 
@@ -148,22 +135,28 @@ ggplot(diamonds, aes(price))+ geom_histogram(color="orange", fill="blue" + theme
 #### Histogram Practice: 
 1. Create a histogram of the price variable. 
 ```{r}
-ggplot(diamonds, aes(price))+geom_histogram()
-
+ggplot(pricebyCut, aes(price))+geom_histogram()
 ```
 2. Include a theme to change the appearance of your graph.
 ```{r}
-
+ggplot(pricebyCut, aes(price))+geom_histogram()+theme_apa()
 ```
 
 3. Create a histogram with orange bars and purple lines. 
 ```{r}
+ggplot(pricebyCut, aes(price))+geom_histogram(color= "purple", fill="pink")+theme_apa(remove.y.gridlines = true())
 
 ```
 
 4. **Bonus** Create a histogram with the worst color combination you can think of. 
 ```{r}
-#see your participation assignment 10/17
+#see your participation assignment 10/22
+
+ggplot(diamonds, aes(price))+
+  geom_histogram(color= "greenyellow", fill="mediumturquoise") +
+  theme_apa(remove.y.gridlines = FALSE, remove.x.gridlines = FALSE) + 
+  theme(panel.background = element_rect(fill= "yellow")) 
+
 ```
 
 **Bar graph** 
@@ -172,7 +165,7 @@ Next, we'll talk about how to make a bar graph. We can do this the same way we m
 We'll practice on the "clarity" column. (I'll use another theme so you can see the differences)
 
 ```{r}
-
+ggplot(diamonds, aes(price))+geom_bar()
 ```
 
 **Changing the x and y label axes** 
