--- a/ggplotNotes.Rmd
+++ b/ggplotNotes.Rmd
@@ -21,6 +21,8 @@ We've already talked about how to transform data into wide and long format. For 
 **summarySE**
 To do this, we're going to use a function called `summarySE()`. It's in the Rmisc package
 ```{r}
+# install package Rmisc 
+
 library(Rmisc)
 ```
 
@@ -28,6 +30,8 @@ We'll try this with the diamonds dataset (located in ggplot). Specifically, we'l
 
 Note: If you have a slow computer, make a subset of the diamonds dataset (typically, I use above 1 carat, but choose your favorite dimension)
 ```{r}
+# install package tidyverse 
+
 library(tidyverse)
 data(diamonds)
 bigDiamonds<- subset(diamonds, diamonds$carat>1) #if needed
@@ -532,18 +536,32 @@ ggplot(diamonds, aes(carat, cut))+
   geom_violin()
 ```
 
+
 ## Learning Outcome 4:Incorporate third variables into graphs
 There are many ways that we can include third variables. 
 
 For bar graphs: 
 use fill = 
 ```{r}
+ggplot(diamonds, aes(price, fill = color))+ geom_histogram() + 
+  theme_classic()
 
+# It should be a histogram because price is a continious variable 
 ```
 
+```{r}
+
+# Bin tells us how many group to graph 
+ggplot(diamonds, aes(price, fill = color))+ geom_histogram(bins = 10) + 
+  theme_classic()
+
+```
 For scatter plots: 
 color = 
 ```{r}
+ggplot(diamonds, aes(price, carat, color = color))+ 
+  geom_point() + 
+  theme_classic()
 
 ```
 
@@ -553,25 +571,71 @@ If you don't like the colors, we can specify specific ones using `scale_fill_dis
 (need to specify option for color scales)
 We'll walk through these together because I think it's helpful to see what color combinations exist and how you can use them in a bar graph or a scatter plot.
 ```{r}
+ggplot(diamonds, aes(price, fill= color)) + 
+  geom_histogram(bins = 100) +
+  theme_classic() + 
+  scale_fill_manual(values = c("#ffef38", "#f7c41a", "#275c78", "#001649", "#9a570c", "#202714", "blue"))
 
+# find color palettes on pinterest
+# google html color picker
+# it is scale_fill_manual() because we are picking the color
 ```
+
 `scale_color_manual(values = #)`; 
 ```{r}
-
+ggplot(diamonds, aes(price, carat, color= color)) + 
+  geom_point() +
+  theme_classic() + 
+  scale_fill_manual(values = c("#ffef38", "#f7c41a", "#275c78", "#001649", "#9a570c", "#202714"))
 ```
 
 R ColorBrewer
 `scale_color_brewer(palette=)`
 ```{r}
+# colorbrewer is a package that include different color skim 
+# search colorbrewer
+# install RColorBrewer package 
 
+library(RColorBrewer)
+ggplot(diamonds, aes(price, carat, color = color))+ 
+  geom_point()+
+  scale_color_brewer(palette = "Set3")
+
+```
+
+```{r}
+ggplot(diamonds, aes(price, carat, color = color))+ 
+  geom_histogram()+
+  scale_color_brewer(palette = "Set3")
 ```
 
 Viridis
 `scale_color_viridis()`
 ```{r}
+# install viridis package if not installed 
+
+library("viridis")
+ggplot(diamonds, aes(price, carat, color = color))+ 
+  geom_point()+
+  scale_color_viridis(discrete = TRUE, option= "H")
+```
+
+```{r}
+
+ggplot(diamonds, aes(price, carat, color = table))+ 
+  geom_point()+
+  scale_color_viridis(discrete = FALSE, option= "H")
 
 ```
 
+```{r}
+# histogram 
+ggplot(diamonds, aes(price, fill = color))+ 
+  geom_histogram()+
+  scale_fill_viridis(discrete= TRUE, option= "inferno")
+
+# If we do not add fill= color, the color does not show
+```
 
 I'll also show you how you can get color pallets online and find the associated color code. 
 
@@ -579,19 +643,50 @@ I'll also show you how you can get color pallets online and find the associated 
 ### Learning Outcome 4 Practice. 
 1. Create a graph of cyl and mpg in the mtcars dataset. 
 ```{r}
+# changing the factor 
+mtcars$cyl <- as.factor(mtcars$cyl)
+ggplot(mtcars, aes(cyl, mpg, color=color))+ 
+  geom_point()
 
 ```
+
+```{r}
+# bar graph 
+mpgByCyl <- mtcars %>%
+  group_by(cyl)%>%
+  summarize(mean = mena(mpg))
+
+ggplot(mtcars, aes(cyl, mean)) + 
+  geom_bar(stat="identity")
+
+# more appropriate to use a boxplot
+```
+
 
 2. In some way, include am as a third variable in this graph. 
 ```{r}
 
+# using a boxplot 
+
+ggplot(mtcars, aes(cyl, mpg, fill = as.factor(am))) + 
+  geom_boxplot() +
+  theme_classic() +
+  scale_fill_viridis(discrete= TRUE, option= "C")
+
 ```
 
-3. Create a graph of mpg and hp. 
+3. Create a graph of mpg and hp using a scatterplot
 ```{r}
+ggplot(mtcars, aes(mpg, hp))+ geom_point()
 
 ```
 4. In some way, include gear as a third variable. 
 ```{r}
+# find the color palette by searching r color brewer 
+
+ggplot(mtcars, aes(mpg, hp, color=as.factor(gear)))+ 
+  geom_point()+
+  theme_classic()+
+  scale_color_brewer(palette = "Blues")
 
 ```
