Update ggplot part 2.Rmd

--- a/ggplot part 2.Rmd
+++ b/ggplot part 2.Rmd
@@ -19,12 +19,21 @@ It can also be helpful to understand how to modify your legend:
 Let's try this on a graph from the diamonds dataset: 
 Create a subset of the diamonds dataset:
 ```{r}
+library(tidyverse)
+data(diamonds)
 
+# How to remove the legend 
+ggplot(diamonds, aes(carat, price, color=cut))+
+  geom_point() +
+  theme(legend.position= "none")
 ```
 
 We can also change the location: 
 ```{r}
-
+# How to move the legend to the bottom of the graph 
+ggplot(diamonds, aes(carat, price, color=cut))+
+  geom_point() +
+  theme(legend.position= "bottom")
 ```
 
 To Change the legend title, you can use a couple of different codes, depending on the type of data: 
@@ -32,7 +41,10 @@ To Change the legend title, you can use a couple of different codes, depending o
 `scale_fill_discrete(name="Title)` should work for a bar graph filled in by a factor
 `scale_color_continuous()` and `scale_fill_continuous()` should work for a numeric fill
 ```{r}
-
+# How to change the names in the legend 
+ggplot(diamonds, aes(carat, price, color=cut))+
+  geom_point() +
+  theme(legend.position= "bottom")
 ```
 
 ### Practice:
@@ -62,7 +74,17 @@ Facet Wrap allows us to incorporate a third variable in another way. Specificall
 
 we need to make a graph and save it (we'll use carat and price)
 ```{r}
+mpgByCyl <- mtcars %>%
+  group_by(cyl)%>%
+  summarize(mean = mena(mpg))
 
+ggplot(mtcars, aes(cyl, mean)) + 
+  geom_bar(stat="identity")
+
+mpg< - ggplot(mtcars, aes(mpg))+
+  geom_bar) 
+mpg+facet_wrap(~cyl)
+  
 ```
 then we'll use cut to create the facets
 ```{r}
