--- a/ggplot part 2.Rmd
+++ b/ggplot part 2.Rmd
@@ -19,71 +19,85 @@ It can also be helpful to understand how to modify your legend:
 Let's try this on a graph from the diamonds dataset: 
 Create a subset of the diamonds dataset:
 ```{r}
+# Install tidyverse 
+
 library(tidyverse)
+
+# download the diamonds data
 data(diamonds)
 
-# How to remove the legend 
-ggplot(diamonds, aes(carat, price, color=cut))+
-  geom_point() +
-  theme(legend.position= "none")
+# Remove the legend from graph + add a third variable
+ggplot(diamonds, aes(carat, price, color=cut))+ 
+  geom_point()+
+  theme(legend.position="none")
 ```
 
 We can also change the location: 
 ```{r}
-# How to move the legend to the bottom of the graph 
-ggplot(diamonds, aes(carat, price, color=cut))+
-  geom_point() +
-  theme(legend.position= "bottom")
+# Move the legend to the bottom
+ggplot(diamonds, aes(carat, price, color=cut))+ 
+  geom_point()+
+  theme(legend.position="bottom")
 ```
 
 To Change the legend title, you can use a couple of different codes, depending on the type of data: 
-`scale_color_discrete(name="Title")` works for scatter plots filled in with a factor
-`scale_fill_discrete(name="Title)` should work for a bar graph filled in by a factor
+`scale_color_manual(name="Title")` works for scatter plots filled in with a factor
+`scale_fill_manual(name="Title)` should work for a bar graph filled in by a factor
 `scale_color_continuous()` and `scale_fill_continuous()` should work for a numeric fill
 ```{r}
-# How to change the names in the legend 
-ggplot(diamonds, aes(carat, price, color=cut))+
-  geom_point() +
-  theme(legend.position= "bottom")
+
 ```
 
 ### Practice:
 
 1) make a graph of disp and hp from mtcars. Include miles per gallon as a third variable
 ```{r}
+# install viridis library 
+
+library(viridis)
+
+# download mtcars data
 data(mtcars)
-ggplot(mtcars, aes(disp, hp, color=mpg))+ 
-  geom_point()
 
-
-# Use discrete = FALSE because the variable is continuous 
+ggplot(mtcars, aes(disp, hp, color= mpg))+ 
+  geom_point()+
+  scale_color_viridis(discrete=FALSE, option="inferno")+
+  theme_classic() 
 ```
 
 2) Move the legend to the top of the graph
 ```{r}
-data(mtcars)
-ggplot(mtcars, aes(disp, hp, color=mpg))+ 
-  geom_point()+ 
+# moving to the top
+ggplot(mtcars, aes(disp, hp, color= mpg))+ 
+  geom_point()+
+  scale_color_viridis(discrete=FALSE, option="inferno")+
   theme_classic()+
-  theme(legend.position= "top")
+  theme(legend.position="top") 
+
+# Moving to the bottom
+ggplot(mtcars, aes(disp, hp, color= mpg))+ 
+  geom_point()+
+  scale_color_viridis(discrete=FALSE, option="inferno")+
+  theme_classic()+
+  theme(legend.position="bottom")
 ```
 
 3) Remove the legend from the graph 
 ```{r}
-data(mtcars)
-ggplot(mtcars, aes(disp, hp, color=mpg))+ 
+ggplot(mtcars, aes(disp, hp, color= mpg))+ 
   geom_point()+
+  scale_color_viridis(discrete=FALSE, option="inferno")+
   theme_classic()+
-  theme(legend.position= "none")
+  theme(legend.position="none")
 ```
 
 4) Change the title of the legend
 ```{r}
-data(mtcars)
-ggplot(mtcars, aes(disp, hp, color=mpg))+ 
-  geom_point()+ 
-  theme_classic()+
-  scale_color_viridis(discrete= FALSE, option="H", name= "Displacement and Horse Power")
+ggplot(mtcars, aes(disp, hp, color= mpg))+ 
+  geom_point()+
+  scale_color_viridis(discrete=FALSE, option="inferno", name= "Miles Per  Gallon")+ 
+  theme_classic()+ 
+  theme(legend.position="top")
 ```
 
 ### Learning Outcome 2: Describe how to use facet wrap
@@ -91,92 +105,72 @@ Facet Wrap allows us to incorporate a third variable in another way. Specificall
 
 we need to make a graph and save it (we'll use carat and price)
 ```{r}
-mpgByCyl <- mtcars %>%
+# Face_wrap for bar graph 
+mpgByCyl<- mtcars %>% 
   group_by(cyl)%>%
-  summarize(mean = mean(mpg))
+  summarize(mean= mean(mpg))
 
-ggplot(mpgByCyl, aes(cyl, mean)) + 
+ggplot(mpgByCyl, aes(cyl, mean))+ 
   geom_bar(stat="identity")
-
-mpg <- ggplot(mtcars, aes(mpg))+
-  geom_bar() 
-mpg+facet_wrap(~cyl)
 ```
-
 ```{r}
-
-# Histogram 
+# Facet_wrap for Histogram 
 ggplot(mtcars, aes(mpg))+ 
-  geom_histogram(bins= 5, fill="blue")+
+  geom_histogram(bins= 5, fill= "blue") + 
   facet_wrap(~cyl)+
-  ylab(label= "frequency")+
-  xlab(label="miles per gallon")
-  
+  ylab(label = "frequency") + 
+  xlab(label= "miles per gallon")
+
 ```
-then we'll use cut to create the facets wrap graph
+
 ```{r}
 # option 1
-labels<- c("4"= "4 cylinder", "6"= "6 cylinder", "8"= "8 cylinder")
+mtcars$cyl<- as.factor(mtcars$cyl)
+levels(mtcars$cyl)<- c("4 cylinders", "6 cylinders", "8 cylinders")
+ggplot(mtcars, aes(mpg))+ geom_histogram()+ 
+  facet_wrap(~cyl)
 
-ggplot(mtcars, aes(mpg))+ geom_histogram(bins= 5, fills= "blue")+  facet_wrap(~as.factor(cyl), labeller= as_labeller(labels))
-
-# option 2
-mtcars$cyl <- as.factor(mtcars$mpg)
-levels(mtcars$cyl) <- c("4 cylinders", "6 cylinders", "8 cylinders")
-ggplot(mtcars, aes(mpg))+ geom_histogram()+facet_wrap(~cyl)
-```
-
-```{r}
-
+#2 option
+labels<- c("4"="4 cylinders", "6"= "6 cylinders","8"=  "8 cylinders")
+data(mtcars)
+ggplot(mtcars, aes(mpg))+ 
+  geom_histogram(bins= 5, fill= "blue")+ 
+  facet_wrap(~cyl, labeller= as_labeller(labels))
 ```
 
 ### Practice: 
 1) create a facet wrap graph to generate a scatterplot of mpg and hp based on the number of cylinders a car has
 ```{r}
-ggplot(mtcars, aes(mpg, hp))+
-  geom_point()+
-  facet_wrap(~cyl, labeller= as_labeller(labels))+
-  theme_classic()+
-  ylab(label= "horse power")+
-  xlab(label= "miles per gallon")
-```
+prettyGraph <- ggplot(mtcars, aes(mpg, hp, color=as.factor(cyl)))+ 
+  geom_point()+ 
+  facet_wrap(~cyl, labeller= as_labeller(labels))+ 
+  theme_classic()+ 
+  ylab(label="Horse Power")+ 
+  xlab(label= "Miles per Gallon")+ 
+  scale_color_viridis(discrete=TRUE, option = "D")
 
-```{r}
-# changing the font and size 
-prettyGraph <- ggplot(mtcars, aes(mpg, hp))+
-  geom_point()+
-  facet_wrap(~cyl, labeller= as_labeller(labels))+
-  theme_classic()+
-  ylab(label= "horse power")+
-  xlab(label= "miles per gallon")+
-  scale_color_viridis(discrete= FALSE, option = "D")
-
-finalPretty <- prettyGraph + theme(legend.position= "none", text = element_text(family = "Times New Roman", size= 18))
-
+prettyGraph + theme(legend.position= "none", text = 
+element_text(family = "Times New Roman",size = 18))
 ```
 
 ### Learning Outcome 3: Explain how to export graphs
 to export graphs, I use the command `ggsave()`
 Specifically, you can use the following arguments: 
-`ggsave("name you want to give the graph", width, height, units, dpi)`
+`ggsave("name of graph", width, height, units, dpi)`
 ```{r}
-
-# How to save and export your graph on the computer 
-
 ggsave("PSY4802-FinalPrettyGraph.tiff", width= 10, height=10, units="in", dpi= 300)
 
 # dpi is the resolution 
 
-# Save without project by using *getwd()*
+# Save without project by using "getwd()"
+
 ```
 I don't usually specify a path in ggsave, but make sure my r code is in the directory I'd like it to be saved in. you can check your working directory by using this code
 ```{r}
 
-
 ```
 you can change your working directory using this code: 
 ```{r}
-
 
 ```
 
