--- a/Statistics in R.Rmd
+++ b/Statistics in R.Rmd
@@ -154,13 +154,15 @@ scale(penguinsData$fishAvailable)
 1) calculate the mean, median, and mode for any data in the our Dataset
 ```{r}
 # mean
-mean(penguinsData$temperature)
+mean(penguinsData$penguinsBorn)
 
 # median 
-median(penguinsData$temperature)
+median(penguinsData$penguinsBorn)
 
 # mode
-mfv(penguinsData$temperature)
+mfv(penguinsData$penguinsBorn)
+
+
 ```
 
 2) what do you notice about these scores? (are they the same? different?) *They are different*
@@ -168,20 +170,26 @@ mfv(penguinsData$temperature)
 3) create z scores for any data in our Dataset. Interpret what participant 3's z score means. 
 ```{r}
 # zscore for temperature 
-scale(penguinsData$temperature)
-
-# The zscore for participant 3 is 
-scale(penguinsData$temperature)[3]
-
-# This tells us that 
+scale(penguinsData$penguinsBorn)
 ```
 
 ```{r}
+# The zscore for participant 3 is 
+scale(penguinsData$penguinsBorn)[3]
 
+# This tells us that the zscore for participant 3 is -0.06. This means that participant 3 was pretty close to the mean, about -.06 below the mean. 
 ```
 
  *Challenge* Graph your data and include the mean median and mode on the graph 
 ```{r}
+ggplot(penguinsData, aes(penguinsBorn))+ 
+  geom_histogram(fill= "grey", bins=100)+
+  geom_freqpoly(bins= 100)
+```
+
+```{r}
+ggplot(penguinsData, aes(penguinsBorn))+ 
+  geom_boxplot()
 
 ```
 
@@ -190,31 +198,45 @@ scale(penguinsData$temperature)[3]
 Now that we have covered some descriptive statistics, we'll talk about parametric ones. Parametric statistics are those that rely on assumptions to make inferences from the sample to the population. We'll go through correlations, t-tests, regression, and ANOVA. We'll go through nonparametric tests, or those that rely on less assumptions, in the next section. 
 
 #### Pearson correlation
-We'll practice running correlations using the dataset above. To do this, we'll look at the correlation between price and rating. 
+We'll practice running correlations using the dataset above. To do this, we'll look at the correlation between fishavaible and temperature 
 `cor(x, y)`
 ```{r}
+cor(penguinsData$fishAvailable, penguinsData$temperature)
 
+# The correlation is -0.03. We do not have a linear relationship because it is negative.
 ```
 **Note:** It's great that we can see the correlation between these two measures, but we don't have any additional information, ie information related to significance.We can use another function, `cor.test()`, to get information about significance.
 `cor.test(x,y)`
 ```{r}
+cor.test(penguinsData$fishAvailable, penguinsData$temperature)
 
+# This give that t= -1.05, df=998, p-value= 0.29, cor= -0.03
 ```
 graph
 ```{r}
-
+ggplot(penguinsData, aes(fishAvailable, temperature))+ 
+  geom_point()+
+  theme_classic()
 ```
 
 We can change whether we our conducting a one tailed or a two tailed test by including an additional argument "alternative." It defaults to a two tailed test, but we can specify a one tailed test in either direction ("greater" or "less") 
 ```{r}
+# directional hypothesis 
 
+cor.test(penguinsData$fishAvailable, penguinsData$temperature, alternative = "greater")
+
+#  it states that the correlation is 0 - "true correlation is greater than 0"
 ```
 
 ### Extra Code about Correlation Tables 
 `cor()` can also be used to create correlation matrices, but need to create a dataframe that is just the variables you'd like to use. 
 `cor(data)`
 ```{r}
+penguinsQuant <- penguinsData %>% 
+  select(fishAvailable, temperature, penguinsBorn)
+cor(penguinsQuant)
 
+# When we run the code, it shows that there's no correlation between our variables 
 ```
 
 #### t-tests
@@ -224,12 +246,29 @@ We can run a variety of t-tests using the same function `t.test()`.
 A one sample t test can be computed by specifying mu in the arguments. 
 `t.test(variable, mu)`
 ```{r}
+# t-test compare the average difference 
+
+# mu is the population mean
+
+t.test(penguinsData$temperature, mu= 0)
+
+# When we run the code, it tells us that we did a one sample t-test. It give us the t-value, df, and p-values. The mean of the sample is 4.4
+
+# Alternative hypothesis 
+t.test(penguinsData$temperature, mu= 0, alternative = "less")
+# p-value of 1 tells us the possibility of seeing our data if it is true. It tells us that we will possibly see our mean if our hypothesis is true. 
 
 ```
 
 ##### two samples t-test
 There are two ways we can use this function when we have two variables (independent or paired). The first is to type our x and y variables in as we did in the correlation function above. 
 ```{r}
+# The two ways to do it:
+# t.test(DV ~ IV, data = dataName)
+# t.test(variableName1, variableName2)
+
+t.test(temperature ~ polarbearPresence, data= penguinsData)
+# Not statistically significant because p-value = 0.99
 
 ```
 You'll notice that the top of the t-test output says "Welch's Two sample t-test." This R function automatically assumes that the variances of each group are unequal. If we wanted to run a traditional paired-samples t-test, we need to include another argument. 
@@ -239,13 +278,19 @@ we can type them in as a formula in R. Formulas typically take the form y ~ x. T
 `t.test(dependent variable ~ indepedent variable, data= dataframe)`
 
 ```{r}
+t.test(temperature ~ polarbearPresence, data= penguinsData, var.equal= TRUE)
 
 ```
-If our data were dependent between observations, we'll run a paired samples t test. The code looks pretty similar to above, but we'll use an additional argument. 
+If our data were dependent between observations, we'll run a *paired samples t test*. The code looks pretty similar to above, but we'll use an additional argument. 
 
 let's use the sleep datset as an example
 ```{r}
+summary(as.factor(penguinsData$polarbearPresence))
 
+# If they are not the same number, we can't do a peair t-test
+
+data(sleep)
+t.test(extra ~ group, data=sleep, pair= TRUE)
 ```
 
 Finally, we some times run one tailed vs two tailed tests, just like we did with the correlations. 
@@ -256,22 +301,25 @@ Finally, we some times run one tailed vs two tailed tests, just like we did with
 ##### Correlation and T-test practice
 1. Open the mtcars dataset. Find the correlation between mpg and hp
 ```{r}
-
+data(mtcars)
+cor(mtcars$mpg, mtcars$hp)
 ```
 
 2. Conduct a significance test to determine if displacement and miles per gallon significantly correlated. 
 ```{r}
-
+cor.test(mtcars$disp, mtcars$mpg)
+# We have a significant correlation because it say there is a true correlation
 ```
 
 3. Conduct a two-tailed t-test examining whether the average mpg differs by transmission (am). 
 ```{r}
-
+t.test(mpg ~ am, data= mtcars)
 ```
 
 4. Conduct a one-tailed t-test examining whether the average displacement(disp) differs engine shape (vs). Specifically, test whether straight engines result in higher displacements.
 ```{r}
-
+t.test(disp ~ vs, data= mtcars, alterative = "less")
+# We do less than because straight engine is 1 and tells us that straight engine have 132
 ```
 
 
