--- a/Statistics in R.Rmd
+++ b/Statistics in R.Rmd
@@ -327,32 +327,44 @@ t.test(disp ~ vs, data= mtcars, alterative = "less")
 Back to the simulated Dataset we made. The code for a linear regression is really similar (ie identical)  to what we used for t-tests.
 `lm(DV ~ IV, data)`
 ```{r}
-
+lm(penguinsBorn ~ fishAvailable, data= penguinsData)
 ```
 I tend to save my linear models because it allows me to do a few useful things:
 Just like we used   `summary()` to get a summary of our data, we can use the same function to learn more about our models
 ```{r}
+penguinBornRegression<- lm(penguinsBorn~ fishAvailable, data= penguinsData)
 
+summary(penguinBornRegression)
 ```
 `str()` is a function that allows us to learn about the structure of our model. We can use this to get specific pieces of information, or additional information that "underlies" our model (eg residuals and fitted values)
 ```{r}
+str(penguinBornRegression)
 
+penguinBornRegression$coefficients
+
+penguinBornRegression$model$penguinsBorn #can use more than one dollar sign 
 ```
 
 **Multiple Regression**
 We can include additional factors and interaction terms to our models: 
 
 ```{r}
+penguinsBornMult<- lm(penguinsBorn ~ fishAvailable + temperature, data= penguinsData)
 
+summary(penguinsBornMult)
 ```
 Using * instead of + will include both the individual predictors AND their interactions
 ```{r}
+penguinsBornMultInteraction<- lm(penguinsBorn ~ fishAvailable * temperature, data= penguinsData)
 
+summary(penguinsBornMultInteraction)
 ```
  
 The : can be used instead of + to include an interaction in your model
 ```{r}
+lm(penguinsBorn~ fishAvailable + polarbearPresence+temperature + fishAvailable:temperature, data=penguinsData)
 
+lm(penguinsBorn~ fishAvailable*temperature*polarbearPresence, data= penguinsData)
 ```
 
 The class of our data and the way data are entered matter for regression models. 
@@ -362,23 +374,56 @@ Data don't really look continuous. We can change age to a factor. This will infl
 
 We may also need to change the reference level for factors.
 `relevel(dat$age, ref="x")`
+```{r}
+polarBearReg<- lm(penguinsBorn~ polarbearPresence, data=penguinsData)
+summary(polarBearReg)
 
+```
 
 **Anova**
 There are several ways you can get Anova results in R. There are differences in the ways that they handle interactions, but they are used in the same way. We can use `aov()`, `anova()`, and `Anova()`
 
 ```{r}
+"ANOVA test"
+# install.packages("car")
+library(car)
+Anova(lm(penguinsBorn~ polarbearPresence, data=penguinsData))
 
+polarBearANOVA<-aov(penguinsBorn~ polarbearPresence, data=penguinsData)
+summary(polarBearANOVA)
+```
+
+```{r}
 "post hoc test"
+TukeyHSD(polarBearANOVA) # don't really need a posthoc test here
 
+EmotionANOVA<- aov(penguinsBorn~ emotionsOfPenguins, data=penguinsData)
+summary(EmotionANOVA)
+TukeyHSD(EmotionANOVA)
+```
+
+```{r}
 "effect size"
-
+# install.packages("lsr")
+library(lsr)
+etaSquared(EmotionANOVA)
 ```
 
  more predictors!
 ```{r}
-"multiple comparisons"
+EmotBearANOVA<-aov(penguinsBorn~ emotionsOfPenguins* polarbearPresence)
+summary(EmotBearANOVA)
+```
 
+```{r}
+"multiple comparisons"
+multcompar<-TukeyHSD(EmotBearANOVA)
+multcompar$`emotionsOfPenguins:polarbearPresence`#allows you to just look at one set of multiple comparisons
+
+TukeyHSD(EmotBearANOVA, "polarbearPresence")
+```
+
+```{r}
 "effectsize"
 
 ```
@@ -387,16 +432,23 @@ There are several ways you can get Anova results in R. There are differences in 
 1. Use the mtcars dataset and create a linear model that predicts mpg from cylinder (cyl) and displacement. Print the results
 ```{r}
 
+summary(lm(mpg~ cyl+ disp, data=mtcars))
+
+# The class for cyl is not a factor, so we use as.factor() function because the output is different 
+
+summary(lm(mpg~ as.factor(cyl)+disp, data=mtcars)
+        
 ```
 
 2. Create the same model, but include an interaction term. 
 ```{r}
+summary(lm(mpg~ as.factor(cyl)*disp, data=mtcars))
 
 ```
 
 3. Run an ANOVA predicting hp from the transmission variable. 
 ```{r}
-
+summary(aov(hp~am, data=mtcars))
 ```
 
 ###Learning Outcome 3: Nonparametric analyses in R
@@ -405,20 +457,36 @@ Nonparametric analyses are run similarly to their parametric versions. In the in
 **biserial correlations**
 Biserial correlations involve a binary outcome and a continuous variable. To run one in R, we need the ltm package. 
 ```{r}
-
+# install.packages("ltm")
+library(ltm)
 ```
 the function is `biserial.cor(continuous, binary)`
 ```{r}
+biserial.cor(penguinsData$penguinsBorn, penguinsData$polarbearPresence, level=2)
 
+library(ggplot2)
+ggplot(penguinsData, aes(penguinsBorn, polarbearPresence))+ geom_point()+geom_smooth(method="lm")
 ```
 Mathematically, this is the same as the pearson's version. 
 ```{r}
-
+cor(penguinsData$penguinsBorn, penguinsData$polarbearPresence)
 ```
 
 **spearman's rho**
 We can calculate spearman's rho and kendall's tau the same way. We just need to use the "method" argument for `cor.test()`
 ```{r}
+levels(as.factor(penguinsData$emotionsOfPenguins))
+penguinsData$emotionsQuant<- car::recode(penguinsData$emotionsOfPenguins, recodes = "'dangerously depressed'= 1; 'dangerously happy'= 7; 'moderately happy' = 5; 'moderately sad'=3;'neutral'=4; 'very happy'= 6; 'very sad'= 2")
+cor.test(penguinsData$penguinsBorn, penguinsData$emotionsQuant,method="spearman")
+
+# "Cannot compute exact p-value with ties" this will appear when you run the code because it is unable to calculate all the p-value and would rank the data in order
+
+```
+
+```{r}
+# Another way is using the kendall, work for ordinal data 
+
+cor.test(penguinsData$penguinsBorn, penguinsData$emotionsQuant, method="kendall")
 
 ```
 
@@ -426,41 +494,87 @@ We can calculate spearman's rho and kendall's tau the same way. We just need to 
 This is the nonparametric version of the t-test. It has the same arguments. We'll do one as an example. 
 `wilcox.test()`
 ```{r}
+# wilcox.test(DV ~ IV)
+
+wilcox.test(penguinsData$penguinsBorn~ penguinsData$polarbearPresence)
+# "true location shift is not equal to 0" tells us that it is a two-tail t-test, it provide the w-value, p-values 
+# We would use this test when our population is normally distributed, equal variance, and the sample are randomly selected 
+# We can use this if a t-test does not work 
 
 ```
+**chi squared test** 
+compare the freq of nominal data. You can ask questions like: does the freq of polarbear presense differ from expected? 
+
+chiquare goodness of fit test allows us to answer this question. to do this, we're going to use the function `chisq.test()`
+```{r}
+# we started with ...
+# chisq.test(penguinsData$polarbearPrense, p= c(.5,.5)), but the variable was not a factor, so we have to recode 
+
+penguinsData$polarbearPresenceQuant <- recode(penguinsData$polarbearPresence, '"yes"=1;"no"=0')
+summary(as.factor(penguinsData$polarbearPresenceQuant))
+chisq.test(c(.344, .656), p= c(.5,.5))
+
+```
+# with a probability of 50-50 of how many polarbear live in N and S
+# we got the number from the summary() and divide it by 1000
+# however, if we expect the polar bear to live in only the south pole, then the probability would be like (0,100)
 
 **binomial tests**
 We use binomial tests to determine if something happens more often than chance. The function is binom.test and it has the following arguments: 
 `binom.test(successes, totalScores, probability)`
 ```{r}
 
+# if we have a true and false test and got 12/20 questions right. We have a probability of 50 because we have two possible answers (T/F)
+binom.test(12, 20, .5)
+
+# When we run the code, it tells us that you will get 60% on the test by chance 
+
 ```
 
 for instance, if we have 10 true/false statements, and get 6 right. Does this differ from chance? 
 ```{r}
-
+binom.test(6, 10,.5)
 ```
 This is a two-tailed test, but can also do one tailed by specifying the alternative. 
 
 20 questions, 5 choices, and want to know probability of getting 14 correct
 ```{r}
-
+binom.test(14, 20, .2)
 ```
 
 
 #### Learning Outcome 3 practice: 
 1. using the mtcars dataset, run a correlation to determine the relationship between engine shape (vs) and hp. What test did you run and why? 
 ```{r}
+data(mtcars)
+class(mtcars$vs)
+class(mtcars$hp)
 
+# use biserial test because one of the variable is continious 
+biserial.cor(mtcars$hp ~ mtcars$vs, level=2)
 ```
 
 2. Run a wilcoxon sign rank test to determine if cylinder and gears have different means. 
 ```{r}
+
+#wilcox.test(cyl~gear, data= mtcars)
+
+wilcox.test(mtcars$cyl, mtcars$gear)
+
+
+# nonparametric version of an ANOVA
+kruskal.test(cyl~gear, data=mtcars)
 
 ```
 
 3. Run a binomial test to determine if the number of cars with manual transmission differs from chance. (hint: use the ? feature to learn more about the dataset.)
 
 ```{r}
+# chance is by 5 
+# total obs is 32
+
+summary(as.factor(mtcars$am))
+table(mtcars$am)
+binom.test(12,32,.5)
 
 ```
